Fix up Sake gripper force limit slider.